--- a/templates/home.html
+++ b/templates/home.html
@@ -91,7 +91,7 @@ $(document).ready(function() {
 			</div>
 		</div>  <!-- category-wrap.// -->
 	</div> <!-- col.// -->
-	<a href="./store.html" class="btn btn-outline-primary">Store</a>
+	<a href="{% static './store.html' %}" class="btn btn-outline-primary">Store</a>
 	<div class="col-lg  col-md-6 col-sm-12 col">
 		<form action="#" class="search">
 			<div class="input-group w-100">
@@ -110,11 +110,11 @@ $(document).ready(function() {
 					<div class="widget-header">
 						<small class="title text-muted">Welcome guest!</small>
 						<div> 
-							<a href="./signin.html">Sign in</a> <span class="dark-transp"> | </span>
-							<a href="./register.html"> Register</a>
+							<a href="{% static './signin.html' %}">Sign in</a> <span class="dark-transp"> | </span>
+							<a href="{% static './register.html' %}"> Register</a>
 						</div>
 					</div>
-					<a href="./cart.html" class="widget-header pl-3 ml-3">
+					<a href="{% static './cart.html' %}" class="widget-header pl-3 ml-3">
 						<div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
 						<span class="badge badge-pill badge-danger notify">0</span>
 					</a>
@@ -135,7 +135,7 @@ $(document).ready(function() {
 <div class="container">
 
 <div class="intro-banner-wrap">
-	<img src="images/banners/1.jpg" class="img-fluid rounded">
+	<img src="{% static 'images/banners/1.jpg' %}" class="img-fluid rounded">
 </div>
 
 </div> <!-- container //  -->
@@ -147,7 +147,7 @@ $(document).ready(function() {
 <div class="container">
 
 <header class="section-heading">
-	<a href="./store.html" class="btn btn-outline-primary float-right">See all</a>
+	<a href="{% static './store.html' %}" class="btn btn-outline-primary float-right">See all</a>
 	<h3 class="section-title">Popular products</h3>
 </header><!-- sect-heading -->
 
@@ -155,72 +155,72 @@ $(document).ready(function() {
 <div class="row">
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/1.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/1.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Just another product name</a>
+				<a href="{% static './product-detail.html' %}" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/2.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/2.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Some item name here</a>
+				<a href="{% static './product-detail.html' %}" class="title">Some item name here</a>
 				<div class="price mt-1">$280.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/3.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/3.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Great product name here</a>
+				<a href="{% static './product-detail.html' %}" class="title">Great product name here</a>
 				<div class="price mt-1">$56.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/4.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/4.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Just another product name</a>
+				<a href="{% static './product-detail.html' %}" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/5.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/5.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Just another product name</a>
+				<a href="{% static './product-detail.html' %}" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/6.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/6.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Some item name here</a>
+				<a href="{% static './product-detail.html' %}" class="title">Some item name here</a>
 				<div class="price mt-1">$280.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/7.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/7.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Great product name here</a>
+				<a href="{% static './product-detail.html' %}" class="title">Great product name here</a>
 				<div class="price mt-1">$56.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/9.jpg"> </a>
+			<a href="{% static './product-detail.html' %}" class="img-wrap"> <img src="{% static 'images/items/9.jpg' %}"> </a>
 			<figcaption class="info-wrap">
-				<a href="./product-detail.html" class="title">Just another product name</a>
+				<a href="{% static './product-detail.html' %}" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
 			</figcaption>
 		</div>
