--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -33,13 +33,10 @@
                 <div class="card-body">
                     
                     <ul class="list-menu">
-                    <li><a href="#">People  </a></li>
-                    <li><a href="#">Watches </a></li>
-                    <li><a href="#">Cinema  </a></li>
-                    <li><a href="#">Clothes  </a></li>
-                    <li><a href="#">Home items </a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">People </a></li>
+                    {% for category in categories %}
+                    <li><a href="#"> {{ category.category_name }}  </a></li>
+                    {% endfor %}
+
                     </ul>
     
                 </div> <!-- card-body.// -->
@@ -126,7 +123,7 @@
     
     <header class="border-bottom mb-4 pb-3">
             <div class="form-inline">
-                <span class="mr-md-auto">32 Items found </span>
+                <span class="mr-md-auto">{{ products_count }} Items found </span>
                 
             </div>
     </header><!-- sect-heading -->
@@ -148,7 +145,7 @@
                             <del class="price-old">${{ product.price }}</del>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="#" class="btn btn-block btn-success">Added to cart </a>
+                    <a href="#" class="btn btn-block btn-primary">Add to cart </a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
