--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -39,13 +39,13 @@
                 </button>
                 <div class="dropdown-menu">
                     {% for category in categories %}
-                    <a class="dropdown-item" href="{{category.slug }}">{{ category.category_name }} </a>
+                    <a class="dropdown-item" href="#">{{ category.category_name }} </a>
                     {% endfor %}
 
                 </div>
             </div>  <!-- category-wrap.// -->
         </div> <!-- col.// -->
-        <a href="{% static './store.html' %}" class="btn btn-outline-primary">Store</a>
+        <a href="{% url 'store' %}" class="btn btn-outline-primary">Store</a>
         <div class="col-lg  col-md-6 col-sm-12 col">
             <form action="#" class="search">
                 <div class="input-group w-100">
