--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -38,8 +38,8 @@
                     <i class="fa fa-bars"></i> All category 
                 </button>
                 <div class="dropdown-menu">
-                    {% for category in categories %}
-                    <a class="dropdown-item" href="#">{{ category.category_name }} </a>
+                    {% for category in links %}
+                    <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }} </a>
                     {% endfor %}
 
                 </div>
