--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -33,8 +33,8 @@
                 <div class="card-body">
                     
                     <ul class="list-menu">
-                    {% for category in categories %}
-                    <li><a href="#"> {{ category.category_name }}  </a></li>
+                    {% for category in links %}
+                    <li><a href="{{ category.get_url }}"> {{ category.category_name }}  </a></li>
                     {% endfor %}
 
                     </ul>
