--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -38,6 +38,7 @@
                     <i class="fa fa-bars"></i> All category 
                 </button>
                 <div class="dropdown-menu">
+                    <a href="{% url 'store' %}"> <b> All Products </b> </a>
                     {% for category in links %}
                         <a class="dropdown-item" href="{{ category.get_url }}">{{ category.category_name }} </a>
                     {% endfor %}
