--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -33,8 +33,9 @@
                 <div class="card-body">
                     
                     <ul class="list-menu">
+                    <a href="{% url 'store' %}"> <b> All Products </b> </a>
                     {% for category in links %}
-                    <li><a href="{{ category.get_url }}"> {{ category.category_name }}  </a></li>
+                        <li><a href="{{ category.get_url }}"> {{ category.category_name }}  </a></li>
                     {% endfor %}
 
                     </ul>
