remove some error

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -21,7 +21,7 @@
 		<main class="col-md-6 border-left">
 <article class="content-body">
 
-<h2 class="title">Off-White Odsy-1000 Low-Top Sneakers</h2>
+<h2 class="title">{{ single_product.product_name }}</h2>
 
 <div class="mb-3"> 
 	<var class="price h4">$815.00</var> 
@@ -89,7 +89,7 @@
 
 	<article class="box mb-3">
 		<div class="icontext w-100">
-			<img src="./images/avatars/avatar1.jpg" class="img-xs icon rounded-circle">
+			<img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
 			<div class="text">
 				<span class="date text-muted float-md-right">24.04.2020 </span>  
 				<h6 class="mb-1">Mike John </h6>
