--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -13,7 +13,7 @@
 		<aside class="col-md-6">
 <article class="gallery-wrap"> 
 	<div class="img-big-wrap">
-	   <a href="#"><img src="{% static './images/items/12.jpg' %}"></a>
+	   <a href="#"><img src="{{ single_product.images.url }}"></a>
 	</div> <!-- img-big-wrap.// -->
 	
 </article> <!-- gallery-wrap .end// -->
@@ -27,7 +27,7 @@
 	<var class="price h4">${{ single_product.price }}</var> 
 </div> 
 
-<p>Virgil Abloh’s Off-White is a streetwear-inspired collection that continues to break away from the conventions of mainstream fashion. Made in Italy, these black and brown Odsy-1000 low-top sneakers.</p>
+<p>{{ single_product.description }}</p>
 
 
 <hr>
