--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -7,9 +7,18 @@
     
     <!-- ============================ COMPONENT 1 ================================= -->
     
+    {% if not cart_item  %}
+        <h2>Your Shopping cart is Empty</h2>
+        <br>
+        <div class="text-center">
+            <a href="{% url 'store' %}" class="btn btn-primary">Continue Shopping</a>
+        </div>
+        
+    {% else%}
     <div class="row">
         <aside class="col-lg-9">
     <div class="card">
+   
     <table class="table table-borderless table-shopping-cart">
     <thead class="text-muted">
     <tr class="small text-uppercase">
@@ -20,6 +29,7 @@
     </tr>
     </thead>
     <tbody>
+
         {% for cart_item in cart_items %}
 <tr>
     <td>
@@ -91,6 +101,7 @@
     
     
     </div> <!-- row.// -->
+    {% endif %}
     <!-- ============================ COMPONENT 1 END .// ================================= -->
     
     </div> <!-- container .//  -->
