--- a/templates/store/cart.html
+++ b/templates/store/cart.html
@@ -7,14 +7,14 @@
     
     <!-- ============================ COMPONENT 1 ================================= -->
     
-    {% if not cart_item  %}
-        <h2>Your Shopping cart is Empty</h2>
+    {% if not cart_items  %}
+        <h2 class="text-center">Your Shopping cart is Empty</h2>
         <br>
         <div class="text-center">
             <a href="{% url 'store' %}" class="btn btn-primary">Continue Shopping</a>
         </div>
         
-    {% else%}
+    {% else %}
     <div class="row">
         <aside class="col-lg-9">
     <div class="card">
