--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -146,7 +146,7 @@
                             <del class="price-old">${{ product.price }}</del>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="{% url 'add_cart' product.id %}" class="btn btn-block btn-primary">Add to cart </a>
+                    <a href="{{ product.get_url }}" class="btn btn-block btn-primary">Product Details </a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
