remove the error from the admin page

--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -36,9 +36,8 @@
 						<div class="item-option-select">
 							<h6>Choose Color</h6>
 							<select name="color" class="form-control" >
-								<option value="red">Red</option>
-								<option value="yellow">Yellow</option>
-								<option value="green">Green</option>
+								<option value="red">{{ variation.variation_value }}</option>
+
 							</select>
 
 						</div>
