--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -36,7 +36,9 @@
 						<div class="item-option-select">
 							<h6>Choose Color</h6>
 							<select name="color" class="form-control" >
-								<option value="red">{{ variation.variation_value }}</option>
+								{% for i in single_product.variation_set.all %}
+									<option value="{{ i.variation_value }}">{{ i.variation_value }}</option>
+								{% endfor %}
 
 							</select>
 
