--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -35,7 +35,8 @@
 					<div class="row">
 						<div class="item-option-select">
 							<h6>Choose Color</h6>
-							<select name="color" class="form-control" >
+							<select name="color" class="form-control" required >
+								<option value="" disabled selected >Choose Color</option>
 								{% for i in single_product.variation_set.all %}
 									<option value="{{ i.variation_value }}">{{ i.variation_value }}</option>
 								{% endfor %}
@@ -45,15 +46,16 @@
 						</div>
 					</div> <!-- row.// -->
 					<div class="row">
-						<div class="item-option-select">
+						<!-- <div class="item-option-select">
 							<h6>Select Size</h6>
 							<select name="size" class="form-control" >
-								<option value="small">Small</option>
-								<option value="medium">Medium</option>
-								<option value="large">Large</option>
+								{% for i in single_product.variation_set.all %}
+									<option value="small">Small</option>
+								{% endfor %}
+
 							</select>
  
-						</div>
+						</div> -->
 					</div> <!-- row.// -->
 					<hr>
 					{% if single_product.stock <= 0 %}
