--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -37,8 +37,8 @@
 							<h6>Choose Color</h6>
 							<select name="color" class="form-control" required >
 								<option value="" disabled selected >Choose Color</option>
-								{% for i in single_product.variation_set.all %}
-									<option value="{{ i.variation_value }}">{{ i.variation_value }}</option>
+								{% for i in single_product.variation_set.colors %}
+									<option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
 								{% endfor %}
 
 							</select>
@@ -46,16 +46,17 @@
 						</div>
 					</div> <!-- row.// -->
 					<div class="row">
-						<!-- <div class="item-option-select">
+						<div class="item-option-select">
 							<h6>Select Size</h6>
 							<select name="size" class="form-control" >
-								{% for i in single_product.variation_set.all %}
-									<option value="small">Small</option>
+								<option value="" disabled selected >Choose Sizes</option>
+								{% for i in single_product.variation_set.Sizes  %}
+									<option value="{{ i.variation_value | lower }}">{{ i.variation_value | capfirst }}</option>
 								{% endfor %}
 
 							</select>
  
-						</div> -->
+						</div>
 					</div> <!-- row.// -->
 					<hr>
 					{% if single_product.stock <= 0 %}
